# chat-gpt

./: README.md  index.html  package.json  tailwind.config.cjs
.github/workflows/: main.yml
src/: App.vue  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: conversation.rs  db.rs  main.rs
src/Lib/: ConversationsStore..ts  ConversationsStore.ts  helpers.ts  types.ts
src/Pages/: Conversation.vue  Home.vue  Settings.vue
src/components/: AsyncIndicator.vue  ChatBox.vue  ContextMenu.vue  Find.vue  Markdown.vue  Sidebar.vue  SidebarItem.vue
src/components/Icons/: IconTrash.vue
